[package]
name = "qlaster"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
bytes = "1.10.1"
crossbeam-queue = "0.3.12"
libc = "0.2.182"
lz4_flex = "0.11.5"
shaq = "3.0.0"
solana-bloom = { version = "3.1.11", features=["agave-unstable-api"] }
solana-pubkey = "3.0.0"
thiserror = "2.0.17"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
wincode = { version = "0.4.5", features = ["derive"] }
