[package]
name = "qlaster"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
arc-swap = "1.7.1"
bytes = "=1.11.1"
crossbeam-queue = "0.3.12"
libc = "0.2.182"
lz4_flex = "0.11.5"
shaq = "3.0.0"
solana-bloom = { version = "=4.0.1", features = ["agave-unstable-api"] }
solana-pubkey = { version = "=4.1.0", default-features = false }
thiserror = "=2.0.18"
tokio = { version = "=1.49.0", features = ["full"] }
tracing = "=0.1.41"
wincode = { version = "=0.4.4", features = ["derive", "solana-short-vec"] }
wincode-derive = "=0.4.2"
